feat: add dto files, adjust handlers and models files
