# internal/models/orcamento.go
@@ -5,10 +5,10 @@ import "time"
 type Orcamento struct {
 	ID               int       `gorm:"primaryKey" json:"id"`
 	DescricaoInicial string    `gorm:"size:300" json:"descricao_inicial"`
-	DescriçãoItem    string    `gorm:"size:300" json:"descricao_item"`
+	DescricaoItem    string    `gorm:"size:300" json:"descricao_item"`
 	Status           string    `gorm:"size:45" json:"status"`
 	PrazoEntrega     time.Time `json:"prazo_entrega"`
-	Valor            string    `gorm:"size:45" json:"valor"`
+	Valor            float64   `gorm:"type:decimal(10,2)" json:"valor"`
 	ClienteID        int       `json:"cliente_id"`
 	AgendamentoID    int       `json:"agendamento_id"`
 	CreatedAt        time.Time `gorm:"autoCreateTime" json:"created_at"`
